fix alignement

--- a/src/main/resources/org/isep/sixquiprend/assets/css/style.css
+++ b/src/main/resources/org/isep/sixquiprend/assets/css/style.css
@@ -49,11 +49,11 @@ Text {
 }
 HBox {
     -fx-border-width: 3;
-    -fx-border-color: #7bda57;
+    /*-fx-border-color: #7bda57;*/
 }
 VBox {
     -fx-border-width: 3;
-    -fx-border-color: red;
+    /*-fx-border-color: red;*/
 }
 .play_button {
     -fx-text-fill: -red;
